--- a/ForumProject/communications/templates/index.html
+++ b/ForumProject/communications/templates/index.html
@@ -4,43 +4,34 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>django-channels-chat</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-        <style>
-            #roomSelect {
-                height: 300px;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-3 p-5">
-            <h2>django-channels-chat</h2>
-            <div class="row">
-                <div class="col-12 col-md-8">
-                    <div class="mb-2">
-                        <label for="roomInput">Enter a room name to connect to it:</label>
-                        <input type="text" class="form-control" id="roomInput" placeholder="Room name">
-                        <small id="roomInputHelp" class="form-text text-muted">If the room doesn't exist yet, it will be created for you.</small>
-                    </div>
-                    <button type="button" id="roomConnect" class="btn btn-success">Connect</button>
-                </div>
-                <div class="col-12 col-md-4">
-                    <label for="roomSelect">Active rooms</label>
-                    <select multiple class="form-control" id="roomSelect">
-                        {% for room in rooms %}
-                            <option>{{ room }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="col-12 col-md-4">
-                    {% for user in users %}
-                        <a href="{% url 'communications:chat-room' user_id=user.id %}">{{ user.first_name }}</a>
-                    {% endfor %}
-                </div>
+<head>
+    <title>django-channels-chat</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <style>
+        #roomSelect {
+            height: 300px;
+        }
+    </style>
+</head>
+<body>
+<div class="container mt-3 p-5">
+    <h2>django-channels-chat</h2>
+    <div class="row">
+        {% for user in users %}
+        <div class="card w-50" style="height: 14rem;">
+            <div class="card-header">
+                {{ user.user_info.role }}
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">{{ user.first_name }}</h5>
+                <p class="card-text">{{ user.phone_number }}</p>
+                <p class="card-text">{{ user.email }}</p>
+                <a href="{% url 'communications:chat-room' user_id=user.id %}" class="btn btn-primary">Send message</a>
             </div>
         </div>
-        <script src="{% static 'index.js' %}"></script>
-    </body>
+        {% endfor %}
+    </div>
+    <script src="{% static 'index.js' %}"></script>
+</body>
 </html>
