message history is connected to a specific room

--- a/ForumProject/communications/templates/room.html
+++ b/ForumProject/communications/templates/room.html
@@ -26,7 +26,7 @@
                 <div class="col-12 col-md-8">
                     <div class="mb-2">
                         <label for="chatLog">Room: #{{ room.name }}</label>
-                        <textarea class="form-control" id="chatLog" readonly></textarea>
+                        <textarea class="form-control" id="chatLog" readonly>{{ users_messages }}</textarea>
                     </div>
                     <div class="input-group">
                         <input type="text" class="form-control" id="chatMessageInput" placeholder="Enter your chat message">
